Cache module created.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
   implementation project(':domain')
   implementation project(':data')
+  implementation project(':cache')
 
   implementation appDependencies.dagger
   implementation appDependencies.daggerSupport
