--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,9 +1,44 @@
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
+
+apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-kapt'
 
 sourceCompatibility = "$rootProject.jvmCompat"
 targetCompatibility = "$rootProject.jvmCompat"
+
+android {
+  compileSdkVersion rootProject.ext.androidCompileSdkVersion
+  buildToolsVersion rootProject.ext.androidBuildToolsVersion
+
+  defaultConfig {
+    minSdkVersion rootProject.ext.androidMinSdkVersion
+    targetSdkVersion rootProject.ext.androidTargetSdkVersion
+    versionCode 1
+    versionName "1.0"
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
+
+  dexOptions {
+    preDexLibraries = false
+    dexInProcess = false
+    javaMaxHeapSize "4g"
+  }
+
+  compileOptions {
+    sourceCompatibility "$rootProject.jvmCompat"
+    targetCompatibility "$rootProject.jvmCompat"
+  }
+
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
+  }
+
+}
 
 dependencies {
   def dataDependencies = rootProject.ext.dataDependencies
@@ -18,9 +53,16 @@ dependencies {
   implementation dataDependencies.retrofitAdapter
   implementation dataDependencies.okHttp
   implementation dataDependencies.okHttpLoggingInt
+  implementation dataDependencies.roomRuntime
+
 
   testImplementation dataTestDependencies.junit
   testImplementation dataTestDependencies.kotlinJUnit
   testImplementation dataTestDependencies.mockito
   testImplementation dataTestDependencies.assertj
+  testImplementation dataTestDependencies.robolectric
+  testImplementation dataTestDependencies.archTesting
+  testImplementation dataTestDependencies.roomTesting
+
+  kapt dataDependencies.roomCompiler
 }
