--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -61,7 +61,9 @@ ext {
       retrofitConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
       retrofitAdapter  : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
       okHttp           : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-      okHttpLoggingInt : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
+      okHttpLoggingInt : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
+      roomRuntime      : "android.arch.persistence.room:runtime:${archVersion}",
+      roomCompiler     : "android.arch.persistence.room:compiler:${archVersion}"
   ]
 
   dataTestDependencies = [
@@ -69,6 +71,10 @@ ext {
       kotlinJUnit: "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}",
       assertj    : "org.assertj:assertj-core:${assertJVersion}",
       mockito    : "com.nhaarman.mockitokotlin2:mockito-kotlin:${mockitoKotlinVersion}",
+      robolectric: "org.robolectric:robolectric:${robolectricVersion}",
+      roomTesting: "android.arch.persistence.room:testing:${archVersion}",
+      archTesting: "android.arch.core:core-testing:${archVersion}",
+
   ]
 
   appDependencies = [
@@ -102,30 +108,5 @@ ext {
       espressoContrib: "androidx.test.espresso:espresso-contrib:${espressoVersion}",
       androidRunner  : "androidx.test:runner:${runnerVersion}",
       androidRules   : "androidx.test:rules:${runnerVersion}"
-  ]
-
-  cacheDependencies = [
-      daggerCompiler    : "com.google.dagger:dagger-compiler:${daggerVersion}",
-      dagger            : "com.google.dagger:dagger:${daggerVersion}",
-      gson              : "com.google.code.gson:gson:${gsonVersion}",
-      rxKotlin          : "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-      kotlin            : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-      javaxAnnotation   : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-      javaxInject       : "javax.inject:javax.inject:${javaxInjectVersion}",
-      androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
-      roomRuntime       : "android.arch.persistence.room:runtime:${archVersion}",
-      roomCompiler      : "android.arch.persistence.room:compiler:${archVersion}",
-  ]
-
-  cacheTestDependencies = [
-      junit        : "junit:junit:${jUnitVersion}",
-      kotlinJUnit  : "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}",
-      assertj      : "org.assertj:assertj-core:${assertJVersion}",
-      mockito      : "com.nhaarman.mockitokotlin2:mockito-kotlin:${mockitoKotlinVersion}",
-      robolectric  : "org.robolectric:robolectric:${robolectricVersion}",
-      roomTesting  : "android.arch.persistence.room:testing:${archVersion}",
-      archTesting  : "android.arch.core:core-testing:${archVersion}",
-      supportRunner: "com.android.support.test:runner:${androidSupportRunnerVersion}",
-      supportRules : "com.android.support.test:rules:${androidSupportRulesVersion}"
   ]
 }
