--- a/data/build.gradle
+++ b/data/build.gradle
@@ -16,8 +16,12 @@ android {
     targetSdkVersion rootProject.ext.androidTargetSdkVersion
     versionCode 1
     versionName "1.0"
-
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    javaCompileOptions {
+      annotationProcessorOptions {
+        arguments = ["room.incremental":"true"]
+      }
+    }
   }
 
   dexOptions {
