--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -29,6 +29,7 @@ ext {
   androidAnnotationsVersion = '21.0.3'
   daggerVersion = '2.11'
   archVersion = '2.1.0'
+  roomVersion = '2.2.0-rc01'
 
   //Testing
   jUnitVersion = '4.12'
@@ -62,8 +63,8 @@ ext {
       retrofitAdapter  : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
       okHttp           : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
       okHttpLoggingInt : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-      roomRuntime      : "android.arch.persistence.room:runtime:${archVersion}",
-      roomCompiler     : "android.arch.persistence.room:compiler:${archVersion}"
+      roomRuntime      : "android.arch.persistence.room:runtime:${roomVersion}",
+      roomCompiler     : "android.arch.persistence.room:compiler:${roomVersion}"
   ]
 
   dataTestDependencies = [
@@ -72,7 +73,7 @@ ext {
       assertj    : "org.assertj:assertj-core:${assertJVersion}",
       mockito    : "com.nhaarman.mockitokotlin2:mockito-kotlin:${mockitoKotlinVersion}",
       robolectric: "org.robolectric:robolectric:${robolectricVersion}",
-      roomTesting: "android.arch.persistence.room:testing:${archVersion}",
+      roomTesting: "android.arch.persistence.room:testing:${roomVersion}",
       archTesting: "android.arch.core:core-testing:${archVersion}",
 
   ]
@@ -91,7 +92,7 @@ ext {
       rxAndroid       : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
       archRuntime     : "android.arch.lifecycle:runtime:${archVersion}",
       archCompiler    : "android.arch.lifecycle:common-java8:${archVersion}",
-      roomRxJava      : "android.arch.persistence.room:rxjava2:${archVersion}"
+      roomRxJava      : "android.arch.persistence.room:rxjava2:${roomVersion}"
   ]
 
   appTestDependencies = [
