--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,7 +27,7 @@ ext {
   javaxAnnotationVersion = '1.0'
   javaxInjectVersion = '1'
   androidAnnotationsVersion = '21.0.3'
-  daggerVersion = '2.11'
+  daggerVersion = '2.23.1'
   archVersion = '2.1.0'
   roomVersion = '2.2.0-rc01'
 
@@ -74,8 +74,7 @@ ext {
       mockito    : "com.nhaarman.mockitokotlin2:mockito-kotlin:${mockitoKotlinVersion}",
       robolectric: "org.robolectric:robolectric:${robolectricVersion}",
       roomTesting: "android.arch.persistence.room:testing:${roomVersion}",
-      archTesting: "android.arch.core:core-testing:${archVersion}",
-
+      archTesting: "android.arch.core:core-testing:${archVersion}"
   ]
 
   appDependencies = [
