--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,20 +14,20 @@ ext {
   jvmCompat = JavaVersion.VERSION_1_8
 
   //Libraries
-  appCompatVersion = '1.1.0-rc01'
-  materialVersion = '1.1.0-alpha08'
-  constraintLayoutVersion = '1.1.3'
+  appCompatVersion = '1.1.0'
+  materialVersion = '1.1.0-alpha10'
+  constraintLayoutVersion = '2.0.0-beta2'
   glideVersion = '4.9.0'
   retrofitVersion = '2.5.0'
   gsonVersion = '2.8.1'
   okHttpVersion = '3.14.2'
-  rxJavaVersion = '2.2.8'
+  rxJavaVersion = '2.2.12'
   rxKotlinVersion = '2.1.0'
   rxAndroidVersion = '2.1.1'
   javaxAnnotationVersion = '1.0'
   javaxInjectVersion = '1'
   androidAnnotationsVersion = '21.0.3'
-  daggerVersion = '2.23.1'
+  daggerVersion = '2.24'
   archVersion = '2.1.0'
   roomVersion = '2.2.0-rc01'
 
