--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,15 +12,16 @@ ext {
   androidTargetSdkVersion = 29
   androidCompileSdkVersion = 29
   jvmCompat = JavaVersion.VERSION_1_8
+  jvmTarget = '1.8'
 
   //Libraries
   appCompatVersion = '1.1.0'
   materialVersion = '1.1.0-alpha10'
   constraintLayoutVersion = '2.0.0-beta2'
   glideVersion = '4.9.0'
-  retrofitVersion = '2.5.0'
+  retrofitVersion = '2.6.2'
   gsonVersion = '2.8.1'
-  okHttpVersion = '3.14.2'
+  okHttpVersion = '4.2.0'
   rxJavaVersion = '2.2.12'
   rxKotlinVersion = '2.1.0'
   rxAndroidVersion = '2.1.1'
