--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,7 +20,7 @@ ext {
   constraintLayoutVersion = '2.0.0-beta2'
   glideVersion = '4.9.0'
   retrofitVersion = '2.6.2'
-  gsonVersion = '2.8.1'
+  moshiVersion = '1.8.0'
   okHttpVersion = '4.2.0'
   rxJavaVersion = '2.2.12'
   rxKotlinVersion = '2.1.0'
@@ -60,8 +60,9 @@ ext {
       dagger           : "com.google.dagger:dagger:${daggerVersion}",
       rxJava           : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
       retrofit         : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-      retrofitConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+      retrofitConverter: "com.squareup.retrofit2:converter-moshi:${retrofitVersion}",
       retrofitAdapter  : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
+      moshi            : "com.squareup.moshi:moshi-kotlin:${moshiVersion}",
       okHttp           : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
       okHttpLoggingInt : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
       roomRuntime      : "android.arch.persistence.room:runtime:${roomVersion}",
